# egrpc

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/agents/: code-reviewer.md  explorer.md  impl-worker.md  test-writer.md
.github/workflows/: ci.yml  codegen.yml
cmake/: FindNghttp2.cmake
docs/: codegen-pinning.md  egrpc-design-and-plan.md  yocto-spike.md
examples/route_guide/: CMakeLists.txt  client_main.cc  route_guide.proto
include/egrpc/: channel_config.h
include/grpcpp/: channel.h  client_context.h  completion_queue.h  create_channel.h  grpcpp.h  ports_def.inc  ports_undef.inc  server_context.h
include/grpcpp/generic/: async_generic_service.h
include/grpcpp/impl/: channel_interface.h  client_unary_call.h  proto_utils.h  rpc_method.h  rpc_service_method.h  server_callback_handlers.h  service_type.h
include/grpcpp/security/: credentials.h
include/grpcpp/support/: async_stream.h  async_unary_call.h  byte_buffer.h  channel_arguments.h  client_callback.h  message_allocator.h  method_handler.h  server_callback.h  status.h  status_code_enum.h  string_ref.h  stub_options.h  sync_stream.h
meta-egrpc/conf/: layer.conf
src/api/: channel.cc  create_channel.cc  serialization.cc
src/core/: backoff.cc  call_state.cc  call_state.h  channel_impl.cc  channel_impl.h  event_thread.cc  event_thread.h  grpc_wire.cc  grpc_wire.h
src/transport/: http2_session.cc  http2_session.h  timer_heap.cc  timer_heap.h  tls_socket.cc  tls_socket.h  wakeup.cc  wakeup.h
tests/: conftest.py  test_keepalive.py  test_shim_unary.py  test_tls.py  test_unary.py
tests/integration/: CMakeLists.txt  h2_keepalive_main.cc  tls_connect_main.cc  unary_call_main.cc
tests/server/: h2_test_server.py  route_guide_server.py  tls_test_server.py
tests/unit/: CMakeLists.txt  test_call_headers.cc  test_call_state.cc  test_event_thread.cc  test_grpc_wire.cc  test_http2_session.cc  test_sanity.cc  test_shim_stubs.cc  test_timer_heap.cc  test_wakeup.cc
tools/: pin-codegen.sh
